--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@uiw/react-markdown-preview": "^5.1.3",
     "@uiw/react-md-editor": "^4.0.5",
+    "@vercel/analytics": "^1.5.0",
     "bcrypt": "^5.1.1",
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.1",
