--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@uiw/react-md-editor": "^4.0.5",
     "@vercel/analytics": "^1.5.0",
     "bcrypt": "^5.1.1",
+    "embla-carousel": "8.6.0",
+    "embla-carousel-react": "8.6.0",
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.1",
     "next": "15.2.4",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "redis": "^5.5.6",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
